Fixed word breaks in blog

--- a/public/css/page.css
+++ b/public/css/page.css
@@ -40,6 +40,9 @@
   line-height: 1.8;
   margin-top: 30px;
   padding: 10px 6px;
+  word-break: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
   font-weight: 400;
 }
 
@@ -78,12 +81,14 @@ blockquote:before {
   content: open-quote;
   font-size: 4em;
   line-height: 0.1em;
-  margin-right: 0.25em;
+  margin-right: 0.15em;
   vertical-align: -0.4em;
 }
 
 blockquote p {
-  font-style: italic;
+  word-break: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
   display: inline;
 }
 
